--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,8 +2,8 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Bluesky.Garden">
     <main>
-        <h1 class="text-2xl">Install Tailwind CSS</h1>
+        <h1 class="text-2xl">Bluesky.Garden</h1>
     </main>
 </Layout>
