--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout title="Bluesky.Garden">
     <header class="flex flex-col gap-4 px-4 pt-20 justify-center items-center">
-        <h1 class="text-5xl font-bold tracking-tight">Bluesky.Garden</h1>
+        <h1 class="text-5xl font-bold tracking-tight">🌱 Bluesky.Garden</h1>
         <h2 class="text-xl text-slate-600">
             A curated directory of Bluesky applications and tools.
         </h2>
