Rename "curated" -> "open" cause I just have added every tool people recommended without any curation 😂

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import recommendations from "../recommendations.json";
             🌱 Bluesky.Garden
         </h1>
         <h2 class="text-xl text-slate-600">
-            A curated directory of Bluesky applications, tools, and resources.
+            An open directory of Bluesky applications, tools, and resources.
         </h2>
     </header>
     <main class="max-w-7xl px-4 mx-auto">
