--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,71 +1,58 @@
 ---
+import Card from "~/components/ui/Card.astro";
 import Layout from "../layouts/Layout.astro";
 
-import tools from "../tools.json";
 import recommendations from "../recommendations.json";
+import tools from "../tools.json";
 ---
 
-<Layout title="Bluesky.Garden">
-    <header class="flex flex-col gap-4 px-4 py-20 justify-center items-center">
-        <h1 class="text-5xl font-bold tracking-tight text-balance">
-            🌱 Bluesky.Garden
-        </h1>
-        <h2 class="text-xl text-slate-600">
-            An open directory of Bluesky applications, tools, and resources.
-        </h2>
-    </header>
-    <main class="max-w-7xl px-4 mx-auto">
-        <div class="grid grid-cols-1 gap-4">
-            {
-                recommendations.map((recommendation) => (
-                    <div class="relative flex flex-row gap-4 items-center group w-fit">
-                        <div>
-                            <p class="text-slate-600">
-                                {recommendation.description}
-                            </p>
-                        </div>
-                        <div>
-                            <span class="underline group-hover:no-underline">
-                                Read more →
-                            </span>
-                        </div>
-                        <a
-                            href={recommendation.url}
-                            class="absolute inset-0"
-                            aria-label={`Read more about ${recommendation.description}`}
-                        />
-                    </div>
-                ))
-            }
-        </div>
-        <div class="mt-20 grid grid-cols-1 md:grid-cols-3 gap-4">
-            {
-                tools.map((tool) => (
-                    <div class="relative p-4 space-y-4 rounded-lg shadow-lg w-96">
-                        <h3 class="text-xl font-bold underline hover:no-underline">
-                            {tool.name}
-                        </h3>
-                        <p class="text-slate-600">{tool.description}</p>
-                        <a
-                            href={tool.url}
-                            class="absolute inset-0"
-                            aria-label={`Read more about ${tool.description}`}
-                        />
-                    </div>
-                ))
-            }
-        </div>
-    </main>
-    <footer class="px-4 pt-20 flex justify-center items-center">
-        <p>
-            <a
-                href="https://github.com/krasun/bluesky.garden"
-                class="underline hover:no-underline">GitHub</a
-            >
-            <a
-                href="https://blueskygarden.pirsch.io/"
-                class="underline hover:no-underline">Analytics</a
-            >
-        </p>
-    </footer>
+<Layout
+  title="Bluesky.Garden — An open directory of Bluesky applications, tools, and resources."
+>
+  <header>
+    <h1 class="text-4xl font-bold tracking-tight text-balance md:text-5xl">
+      An open directory of <span class="underline text-primary">Bluesky</span>
+      applications, tools, and resources.
+    </h1>
+  </header>
+
+  <div class="flex flex-col gap-6 sm:gap-4">
+    {
+      recommendations.map((recommendation) => (
+        <a
+          href={recommendation.url}
+          target="_blank"
+          rel="noopener noreferrer"
+          aria-label={`Read more about ${recommendation.title}`}
+          class="relative flex flex-wrap items-center gap-x-4 gap-y-2 group w-fit"
+        >
+          <div>
+            <strong class="text-medium">
+              &ldquo;{recommendation.title}&rdquo;
+            </strong>
+
+            <span class="text-muted whitespace-nowrap">
+              — by {recommendation.author}
+            </span>
+          </div>
+
+          <span class="underline group-hover:no-underline">Read more →</span>
+        </a>
+      ))
+    }
+  </div>
+
+  <div class="grid grid-cols-1 gap-4 sm:grid-cols-2 md:grid-cols-3 md:gap-6">
+    {
+      tools.map((tool) => (
+        <Card
+          href={tool.url}
+          name={tool.name}
+          description={tool.description}
+          target="_blank"
+          rel="noopener noreferrer"
+        />
+      ))
+    }
+  </div>
 </Layout>
