Implement single tool page

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
 import Link from "~/components/ui/Link.astro";
 ---
 
-<footer>
+<footer class="mt-auto">
   <nav class="flex flex-wrap items-center gap-4 md:gap-6">
     <Link
       href="https://github.com/krasun/bluesky.garden"
