--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -28,7 +28,7 @@ const { title } = Astro.props;
     />
 
     <script
-      defer
+      is:inline
       src="https://api.pirsch.io/pa.js"
       id="pianjs"
       data-code="1fToZBMpt2Xs76jqvyzEWi6xh5ivpGSe"></script>
