--- a/src/components/ui/Card.astro
+++ b/src/components/ui/Card.astro
@@ -6,9 +6,10 @@ import Button from "~/components/ui/Button.astro";
 type Props = HTMLAttributes<"a"> & {
   name: string;
   description?: string;
+  faviconUrl?: string;
 };
 
-const { href, name, description, ...props } = Astro.props as Props;
+const { href, name, description, faviconUrl, ...props } = Astro.props as Props;
 ---
 
 <a
@@ -18,18 +19,20 @@ const { href, name, description, ...props } = Astro.props as Props;
   {...props}
 >
   <div class="flex items-center gap-3">
-    <div
-      class="flex size-9 items-center justify-center shrink-0 rounded-md border bg-background p-1"
-    >
-      <Image
-        src={`https://www.google.com/s2/favicons?sz=128&domain_url=${href}`}
-        alt={`A favicon of ${name}`}
-        loading="lazy"
-        width="64"
-        height="64"
-        class="aspect-square size-7 rounded-sm"
-      />
-    </div>
+    {
+      faviconUrl && (
+        <div class="flex size-9 items-center justify-center shrink-0 rounded-md border bg-background p-1">
+          <Image
+            src={faviconUrl}
+            alt={`A favicon of ${name}`}
+            loading="lazy"
+            width="64"
+            height="64"
+            class="aspect-square size-7 rounded-sm"
+          />
+        </div>
+      )
+    }
 
     <h3 class="text-xl font-semibold">
       {name}
@@ -38,5 +41,5 @@ const { href, name, description, ...props } = Astro.props as Props;
 
   <p class="max-w-xs text-muted text-pretty line-clamp-3">{description}</p>
 
-  <Button class="mt-auto">Visit website</Button>
+  <Button class="mt-auto">Read more</Button>
 </a>
