--- a/src/components/ui/Link.astro
+++ b/src/components/ui/Link.astro
@@ -1,8 +1,7 @@
 ---
 import type { HTMLAttributes } from "astro/types";
 
-const pathname = new URL(Astro.request.url).pathname;
-const currentPath = pathname.slice(1);
+const { pathname } = new URL(Astro.request.url);
 
 type Props = HTMLAttributes<"a">;
 
@@ -12,8 +11,7 @@ const { href, ...props } = Astro.props as Props;
 <a
   href={href}
   class:list={[
-    (href === "/" && currentPath === "") ||
-    (!!href && currentPath.startsWith(href as string))
+    href === pathname || (href !== "/" && pathname.startsWith(href as string))
       ? "text-foreground underline"
       : "text-muted hover:text-foreground",
   ]}
