--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,10 +14,13 @@ const { title } = Astro.props;
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Astro description" />
     <meta name="viewport" content="width=device-width" />
+    <meta
+      name="description"
+      content="An open directory of Bluesky applications, tools, and resources."
+    />
 
-    <title>{title}</title>
+    <title>{title} — Bluesky.Garden</title>
 
     <link rel="preconnect" href="https://rsms.me/" />
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
