--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,5 @@
 ---
-import slugify from "@sindresorhus/slugify";
-import Card from "~/components/ui/Card.astro";
+import ToolCard from "~/components/ToolCard.astro";
 import Grid from "~/components/ui/Grid.astro";
 import Intro from "~/components/ui/Intro.astro";
 import Layout from "~/layouts/Layout.astro";
@@ -46,15 +45,6 @@ import tools from "~/tools.json";
   </div>
 
   <Grid>
-    {
-      tools.map((tool) => (
-        <Card
-          href={`/tools/${slugify(tool.name, { decamelize: true })}`}
-          name={tool.name}
-          description={tool.description}
-          faviconUrl={`https://www.google.com/s2/favicons?sz=128&domain_url=${tool.url}`}
-        />
-      ))
-    }
+    {tools.map((tool) => <ToolCard tool={tool} />)}
   </Grid>
 </Layout>
