--- a/src/components/ui/Grid.astro
+++ b/src/components/ui/Grid.astro
@@ -1,3 +1,3 @@
-<div class="grid grid-cols-1 gap-4 sm:grid-cols-2 md:grid-cols-3 md:gap-6">
+<div class="grid grid-cols-1 gap-4 sm:grid-cols-2 lg:grid-cols-3 md:gap-6">
   <slot />
 </div>
