--- a/src/components/ui/Heading.astro
+++ b/src/components/ui/Heading.astro
@@ -1,3 +1,5 @@
-<h1 class="text-4xl font-bold tracking-tight text-balance md:text-5xl">
+<h1
+  class="max-w-3xl text-4xl/[1.1em] font-bold tracking-tight text-pretty md:text-5xl/[1.1em]"
+>
   <slot />
 </h1>
