Add category listings on the homepage

--- a/src/components/ui/Card.astro
+++ b/src/components/ui/Card.astro
@@ -16,7 +16,7 @@ const { href, name, description, faviconUrl, buttonText, ...props } =
 
 <a
   href={href}
-  class="group flex flex-col gap-4 p-5 rounded-lg border hover:border-border-dark md:p-6"
+  class="group flex flex-col items-start gap-4 p-5 rounded-lg border hover:border-border-dark md:p-6"
   aria-label={`Read more about ${description}`}
   {...props}
 >
