--- a/src/components/ui/Heading.astro
+++ b/src/components/ui/Heading.astro
@@ -1,5 +1,5 @@
 <h1
-  class="max-w-3xl text-4xl/[1.1em] font-bold tracking-tight text-pretty md:text-5xl/[1.1em]"
+  class="max-w-3xl text-4xl/[1.1em] font-bold tracking-tight text-pretty lg:text-5xl/[1.1em]"
 >
   <slot />
 </h1>
