--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -19,5 +19,10 @@ import Link from "~/components/ui/Link.astro";
     >
       Analytics
     </Link>
+
+    <div>
+      Made by <Link href="https://kulpinski.dev/">Piotr Kulpinski</Link> and <Link
+        href="https://dmytrokrasun.com/">Dmytro Krasun</Link><span>.</span>
+    </div>
   </nav>
 </footer>
