--- a/src/components/ui/Link.astro
+++ b/src/components/ui/Link.astro
@@ -16,6 +16,4 @@ const { href, ...props } = Astro.props as Props;
       : "text-muted hover:text-foreground",
   ]}
   {...props}
->
-  <slot />
-</a>
+><slot /></a>
