--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,6 +30,8 @@ const { title } = Astro.props;
       href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text x=%2250%%22 y=%2250%%22 font-size=%2280%22 text-anchor=%22middle%22 dominant-baseline=%22middle%22>🌱</text></svg>"
     />
 
+    <link rel="sitemap" href="/sitemap-index.xml" />
+
     <script
       is:inline
       src="https://api.pirsch.io/pa.js"
