--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -3,14 +3,17 @@ import Link from "~/components/ui/Link.astro";
 ---
 
 <div class="flex flex-wrap items-center justify-between gap-4 md:gap-6">
-  <a href="/" class="font-display font-medium hover:opacity-80">
-    <span class="text-[1.25em] mr-1">🌱</span>
-    Bluesky.Garden
-  </a>
+    <a href="/" class="font-display font-medium hover:opacity-80">
+        <span class="text-[1.25em] mr-1">🌱</span>
+        Bluesky.Garden
+    </a>
 
-  <nav class="flex flex-wrap items-center gap-4 md:gap-6">
-    <Link href="/">Home</Link>
-    <Link href="/categories">Categories</Link>
-    <!-- <Link href="/submit">Submit</Link> -->
-  </nav>
+    <nav class="flex flex-wrap items-center gap-4 md:gap-6">
+        <Link href="/">Home</Link>
+        <Link href="/categories">Categories</Link>
+        <Link
+            href="https://github.com/krasun/bluesky.garden?tab=readme-ov-file#submit-your-tool"
+            >Submit</Link
+        >
+    </nav>
 </div>
